--- a/css/index.css
+++ b/css/index.css
@@ -30,6 +30,14 @@ vermelho {
   color: #ff0000;
 }
 
+.jogo {
+  width: auto;
+  height: auto;
+  background-color: #fff;
+  z-index: 0;
+  display: block;
+}
+
 #dicionario {
   width: 100%;
   height: 100%;
