--- a/css/index.css
+++ b/css/index.css
@@ -62,6 +62,13 @@ body {
   display: block;
   animation: loading 1s linear infinite;
 }
+b {
+  font-weight: bold;
+}
+em {
+  font-style: italic;
+  font-weight: normal;
+}
 #palavrasTentadas {
   font-size: 1.2em;
   font-weight: bold;
@@ -117,24 +124,34 @@ vermelho {
   display: block;
 }
 
+div {
+  --line-indent: 1em;
+  padding-left: var(--line-indent);
+  text-indent: calc(-1 * var(--line-indent));
+  margin-left: var(--line-indent);
+}
+
 #significado {
   width: 100%;
   height: 100%;
   background-color: #fff;
-  margin: 10px;
+  /* margin: 10px; */
   z-index: 100;
-  font-size: var(--letra-tamanho);
+  font-size: auto;
+  display: inline-block;
+  text-align: start;
+}
 
-  display: block;
+#significado #singular {
+  width: 90%;
+  line-height: 2em;
+  background: #ccc;
+  border: gray 2px groove;
+  box-shadow: 1px 2px;
 }
 
 #significado .tabulacao {
   margin: 15px 20px;
-}
-
-#significado em {
-  font-style: italic;
-  font-weight: bold;
 }
 
 #significado strong {
