--- a/css/index.css
+++ b/css/index.css
@@ -98,6 +98,24 @@ vermelho {
   display: block;
 }
 
+.keyboard {
+  width: 100%;
+  height: 100%;
+  margin: 2em auto;
+  background-color: #fff;
+  z-index: 0;
+  display: grid;
+  grid-template-columns: repeat(10, 2.3em);
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
+
+.keyboard > .key {
+  background-color: #0c0c0c;
+  color: #fff;
+}
+
 #dicionario {
   width: 100%;
   height: 100%;
